if/freebasic/hpdf.bi

declare function HPDF_Page_Clip cdecl alias "HPDF_Page_Clip" (byval page as HPDF_Page) as HPDF_STATUS
declare function HPDF_Page_Eoclip cdecl alias "HPDF_Page_Eoclip" (byval page as HPDF_Page) as HPDF_STATUS
declare function HPDF_Page_BeginText cdecl alias "HPDF_Page_BeginText" (byval page as HPDF_Page) as HPDF_STATUS
declare function HPDF_Page_EndText cdecl alias "HPDF_Page_EndText" (byval page as HPDF_Page) as HPDF_STATUS
declare function HPDF_Page_SetCharSpace cdecl alias "HPDF_Page_SetCharSpace" (byval page as HPDF_Page, byval value as HPDF_REAL) as HPDF_STATUS
declare function HPDF_Page_SetWordSpace cdecl alias "HPDF_Page_SetWordSpace" (byval page as HPDF_Page, byval value as HPDF_REAL) as HPDF_STATUS
declare function HPDF_Page_SetHorizontalScalling cdecl alias "HPDF_Page_SetHorizontalScalling" (byval page as HPDF_Page, byval value as HPDF_REAL) as HPDF_STATUS
declare function HPDF_Page_SetTextLeading cdecl alias "HPDF_Page_SetTextLeading" (byval page as HPDF_Page, byval value as HPDF_REAL) as HPDF_STATUS
declare function HPDF_Page_SetFontAndSize cdecl alias "HPDF_Page_SetFontAndSize" (byval page as HPDF_Page, byval font as HPDF_Font, byval size as HPDF_REAL) as HPDF_STATUS
declare function HPDF_Page_SetTextRenderingMode cdecl alias "HPDF_Page_SetTextRenderingMode" (byval page as HPDF_Page, byval mode as HPDF_TextRenderingMode) as HPDF_STATUS
declare function HPDF_Page_SetTextRise cdecl alias "HPDF_Page_SetTextRise" (byval page as HPDF_Page, byval value as HPDF_REAL) as HPDF_STATUS
declare function HPDF_Page_SetTextRaise cdecl alias "HPDF_Page_SetTextRaise" (byval page as HPDF_Page, byval value as HPDF_REAL) as HPDF_STATUS
declare function HPDF_Page_MoveTextPos cdecl alias "HPDF_Page_MoveTextPos" (byval page as HPDF_Page, byval x as HPDF_REAL, byval y as HPDF_REAL) as HPDF_STATUS
declare function HPDF_Page_MoveTextPos2 cdecl alias "HPDF_Page_MoveTextPos2" (byval page as HPDF_Page, byval x as HPDF_REAL, byval y as HPDF_REAL) as HPDF_STATUS
declare function HPDF_Page_SetTextMatrix cdecl alias "HPDF_Page_SetTextMatrix" (byval page as HPDF_Page, byval a as HPDF_REAL, byval b as HPDF_REAL, byval c as HPDF_REAL, byval d as HPDF_REAL, byval x as HPDF_REAL, byval y as HPDF_REAL) as HPDF_STATUS
declare function HPDF_Page_MoveToNextLine cdecl alias "HPDF_Page_MoveToNextLine" (byval page as HPDF_Page) as HPDF_STATUS
declare function HPDF_Page_ShowText cdecl alias "HPDF_Page_ShowText" (byval page as HPDF_Page, byval text as zstring ptr) as HPDF_STATUS
declare function HPDF_Page_ShowTextNextLine cdecl alias "HPDF_Page_ShowTextNextLine" (byval page as HPDF_Page, byval text as zstring ptr) as HPDF_STATUS
declare function HPDF_Page_ShowTextNextLineEx cdecl alias "HPDF_Page_ShowTextNextLineEx" (byval page as HPDF_Page, byval word_space as HPDF_REAL, byval char_space as HPDF_REAL, byval text as zstring ptr) as HPDF_STATUS
declare function HPDF_Page_SetGrayFill cdecl alias "HPDF_Page_SetGrayFill" (byval page as HPDF_Page, byval gray as HPDF_REAL) as HPDF_STATUS
declare function HPDF_Page_SetGrayStroke cdecl alias "HPDF_Page_SetGrayStroke" (byval page as HPDF_Page, byval gray as HPDF_REAL) as HPDF_STATUS
declare function HPDF_Page_SetRGBFill cdecl alias "HPDF_Page_SetRGBFill" (byval page as HPDF_Page, byval r as HPDF_REAL, byval g as HPDF_REAL, byval b as HPDF_REAL) as HPDF_STATUS
declare function HPDF_Page_SetRGBStroke cdecl alias "HPDF_Page_SetRGBStroke" (byval page as HPDF_Page, byval r as HPDF_REAL, byval g as HPDF_REAL, byval b as HPDF_REAL) as HPDF_STATUS
declare function HPDF_Page_SetCMYKFill cdecl alias "HPDF_Page_SetCMYKFill" (byval page as HPDF_Page, byval c as HPDF_REAL, byval m as HPDF_REAL, byval y as HPDF_REAL, byval k as HPDF_REAL) as HPDF_STATUS
declare function HPDF_Page_SetCMYKStroke cdecl alias "HPDF_Page_SetCMYKStroke" (byval page as HPDF_Page, byval c as HPDF_REAL, byval m as HPDF_REAL, byval y as HPDF_REAL, byval k as HPDF_REAL) as HPDF_STATUS
declare function HPDF_Page_ExecuteXObject cdecl alias "HPDF_Page_ExecuteXObject" (byval page as HPDF_Page, byval obj as HPDF_XObject) as HPDF_STATUS
declare function HPDF_Page_DrawImage cdecl alias "HPDF_Page_DrawImage" (byval page as HPDF_Page, byval image as HPDF_Image, byval x as HPDF_REAL, byval y as HPDF_REAL, byval width as HPDF_REAL, byval height as HPDF_REAL) as HPDF_STATUS
declare function HPDF_Page_Circle cdecl alias "HPDF_Page_Circle" (byval page as HPDF_Page, byval x as HPDF_REAL, byval y as HPDF_REAL, byval ray as HPDF_REAL) as HPDF_STATUS
declare function HPDF_Page_Ellipse cdecl alias "HPDF_Page_Ellipse" (byval page as HPDF_Page, byval x as HPDF_REAL, byval y as HPDF_REAL, byval xray as HPDF_REAL, byval yray as HPDF_REAL) as HPDF_STATUS
declare function HPDF_Page_Arc cdecl alias "HPDF_Page_Arc" (byval page as HPDF_Page, byval x as HPDF_REAL, byval y as HPDF_REAL, byval ray as HPDF_REAL, byval ang1 as HPDF_REAL, byval ang2 as HPDF_REAL) as HPDF_STATUS
declare function HPDF_Page_TextOut cdecl alias "HPDF_Page_TextOut" (byval page as HPDF_Page, byval xpos as HPDF_REAL, byval ypos as HPDF_REAL, byval text as zstring ptr) as HPDF_STATUS
declare function HPDF_Page_TextRect cdecl alias "HPDF_Page_TextRect" (byval page as HPDF_Page, byval left as HPDF_REAL, byval top as HPDF_REAL, byval right as HPDF_REAL, byval bottom as HPDF_REAL, byval text as zstring ptr, byval align as HPDF_TextAlignment, byval len as HPDF_UINT ptr) as HPDF_STATUS
declare function HPDF_Page_SetSlideShow cdecl alias "HPDF_Page_SetSlideShow" (byval page as HPDF_Page, byval type as HPDF_TransitionStyle, byval disp_time as HPDF_REAL, byval trans_time as HPDF_REAL) as HPDF_STATUS
'end extern
#endif
